# feriaEmpresarial-ColegioAteniense

./: .gitignore  LICENSE  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
feria-backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
feria-backend/alembic/: env.py
feria-backend/alembic/versions/: 39cba10279d3_user_is_active_field.py
feria-backend/app/: api.py  main.py
feria-backend/app/core/: auth.py  config.py  exceptions.py  init_admin.py  init_categories.py  init_roles.py  security.py
feria-backend/app/db/: database.py
feria-backend/app/filters/: __init__.py  category.py  company.py  product.py
feria-backend/app/models/: __init__.py  balance_txns.py  balances.py  companies.py  company_balance.py  enums.py  idempotency_key.py  order_items.py  orders.py  product.py  product_category.py  user.py  user_role.py
feria-backend/app/routers/: __init__.py  admin.py  auth.py  balance_txns.py  balances.py  categories.py  companies.py  filter.py  orders.py  products.py  stats.py  users.py
feria-backend/app/schemas/: __init__.py  balance.py  balance_txn.py  company.py  company_balance.py  order.py  order_item.py  product.py  product_category.py  stats.py  user.py
feria-backend/app/services/: __init__.py  balance_service.py  balance_txn_service.py  company_service.py  order_service.py  product_category_service.py  product_service.py  s3_service.py  settlement_service.py  user_service.py
feria-frontend/: index.html  package.json  pnpm-lock.yaml
feria-frontend/src/: App.tsx  index.css  main.tsx
(+42 files in other folders)
