[project]
name = "feria-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "boto3>=1.43.9",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.0",
    "uuid6>=2025.0.0",
    "uliweb-alembic>=0.6.9",
    "fastapi-filter>=2.0.1",
    "boto3-stubs~=1.43.9",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "uvicorn>=0.47.0",
]
